graph no longer stretched

--- a/src/css/bottomPanel.css
+++ b/src/css/bottomPanel.css
@@ -1,7 +1,6 @@
 .canvas-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   position: relative;
 }
 
